--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx serverest",
-    "cy:run": "npx cypress run"
+    "test": "npx cypress run",        
+    "start": "npx serverest",          
+    "cy:run": "npx cypress run"        
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.6.0",
-    "joi": "^17.12.0"
+    "cypress": "^13.6.0",               
+    "joi": "^17.12.0"             
   }
 }
